# rsomics-vcf-filter

./: Cargo.toml
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs  smoke.rs
tests/golden/: mixed_filters.vcf  two.vcf
