[package]
name = "rsomics-vcf-filter"
version = "0.2.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-vcf-filter"
authors = ["Zane Leong <efd@live.com>"]
description = "VCF/BCF record filtering by region, quality, INFO/FORMAT fields — Rust port of bcftools view/filter"

[[bin]]
name = "rsomics-vcf-filter"
path = "src/main.rs"


[lib]
name = "rsomics_vcf_filter"
path = "src/lib.rs"
doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-vcf-expr = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }

[dev-dependencies]
tempfile = "3"

